# aoc2025

./: .gitignore  Cargo.toml
crates/aoc-utils/: Cargo.toml
crates/aoc-utils/src/: lib.rs
crates/day01/: Cargo.toml  README.md
crates/day01/src/: main.rs
